adding seo tags and alt tags

--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
-    <title>CrucibleSkills</title>
-    <base href="/" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
+    <meta
+      name="description"
+      content="Information and skills for Amazon's game Crucible. Create and share the builds you use in game."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Amazon Crucible Skills</title>
+    <base href="/" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap"
