adding more seo data

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
       content="Information and skills for Amazon's game Crucible. Create and share the builds you use in game."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Amazon Crucible Skills</title>
+    <title>Crucible Skill Tree and Builds | Amazon's Game</title>
     <base href="/" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <link
